fix forms gap style

--- a/styles/live.css
+++ b/styles/live.css
@@ -144,7 +144,7 @@
 
 .login {
   display: block;
-  position: fixed;
+  position: absolute;
 
   top: 1rem;
   right: 1rem;
@@ -175,7 +175,7 @@
   display: flex;
   flex-flow: row wrap;
   align-items: flex-end;
-  gap: 0.5rem 1rem;
+  gap: 0.5rem 0.75rem;
 
   width: 100%;
   margin: 1.5rem 0 1rem;
@@ -266,7 +266,7 @@
   display: flex;
   flex-flow: row wrap;
   align-items: flex-end;
-  gap: 0.5rem 1rem;
+  gap: 0.5rem 0.75rem;
 
   width: 100%;
   margin: 1.5rem 0 1rem;
